Documentation: create spec for login
