# app/features/authentication/domain/entity/auth_entity.go
@@ -9,56 +9,3 @@ type AuthEntity struct {
 	// required: true
 	RefreshToken string `json:"refresh_token"`
 }
-
-// The response when a request successfully processed
-// swagger:response RegistrationSuccessResponse
-type _ struct {
-	// in: body
-	// required: true
-	Body struct {
-		// example: success
-		// required: true
-		Status string `json:"status"`
-		// example: Request successfully processed
-		// required: true
-		Message string `json:"message"`
-		// required: true
-		Data AuthEntity `json:"data"`
-	}
-}
-
-// The response when a request fails to be processed caught by error content-type
-// swagger:response Registration500Response
-type _ struct {
-	// in: body
-	// required: true
-	Body struct {
-		// example: error
-		// required: true
-		Status string `json:"status"`
-		// example: Internal server error
-		// required: true
-		Message string `json:"message"`
-		// example: null
-		// required: true
-		Data interface{} `json:"data"`
-	}
-}
-
-// The response when a request fails to be processed caught by error validation, encryption, database, access token, and refresh token
-// swagger:response Registration400Response
-type _ struct {
-	// in: body
-	// required: true
-	Body struct {
-		// example: error
-		// required: true
-		Status string `json:"status"`
-		// example: Bad request
-		// required: true
-		Message string `json:"message"`
-		// example: null
-		// required: true
-		Data interface{} `json:"data"`
-	}
-}
